logig register complete

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,11 @@
   padding: 0.5% 2%;
 }
 
+.prowessity-logo{
+ height: 26px;
+ margin: 0 0 0 20px;
+}
+
 /* HOME PAGE */
 .productCard {
 padding: 0.5% 2%;
